@@ -1,3 +1,8 @@
+2007-04-10  Jorn Baayen  <jorn@openedhand.com>
+
+	* matchbox-panel/mb-panel.c: (load_applet), (main):
+	Fix indent.
+
 2007-04-10  Matthew Allum  <mallum@openedhand.com>
 
 	* applets/showdesktop/Makefile.am:
